update : swagger api 명세서 수정
